# haskpy

./: CONTRIBUTING.md  README.md  cabal.project  haskpy.cabal  python_client.py  run-tests.sh  test_python_client.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: haskell-ci.yml
app/: Main.hs
cbits/: example.c  example.h
src/: Main.hs
src/HaskPy/: Main.hs  Math.hs
src/HaskPy/Math/: Internal.hs  Math.hs
test/: APISpec.hs  MathSpec.hs  Spec.hs  TestRunner.hs
