cabal-version:      3.0
name:               haskpy
version:            0.1.0.0
synopsis:           A simple Haskell application
description:        A simple Hello World program in Haskell
author:             Your Name
maintainer:         your.email@example.com
category:           Example
build-type:         Simple

common common-options
  default-language:    Haskell2010
  ghc-options:        -Wall

executable haskpy
  import:             common-options
  main-is:            Main.hs
  build-depends:      base >=4.17 && <4.20,
                     process >=1.6.0 && <1.7,
                     directory >=1.3.0.0,
                     scotty >=0.12,
                     aeson >=2.0,
                     text >=2.0,
                     bytestring >=0.11.0.0,
                     http-types >=0.12,
                     wai-extra >=3.1,
                     wai >=3.2,
                     transformers >=0.5.0.0,
                     scotty >=0.12
  hs-source-dirs:     src
  ghc-options:        -Wall -O2
