cabal-version:      3.0
name:               haskpy
version:            0.1.0.0
synopsis:           A simple Haskell application
description:        A simple Hello World program in Haskell
author:             Your Name
maintainer:         your.email@example.com
category:           Example
build-type:         Simple
extra-source-files: CHANGELOG.md

data-files:         
  README.md
  LICENSE

common common-options
  default-language:    Haskell2010
  ghc-options:        -Wall

library
  import:             common-options
  hs-source-dirs:     src
  exposed-modules:    HaskPy.Math
  build-depends:      base >=4.17 && <4.20,
                     aeson >=2.0,
                     text >=2.0,
                     bytestring >=0.11.0.0,
                     http-types >=0.12,
                     wai-extra >=3.1,
                     wai >=3.2,
                     scotty >=0.12
  ghc-options:        -Wall -O2

executable haskpy
  import:             common-options
  main-is:            Main.hs
  build-depends:      base >=4.17 && <4.20,
                     process >=1.6.0 && <1.7,
                     directory >=1.3.0.0,
                     scotty >=0.12,
                     aeson >=2.0,
                     text >=2.0,
                     bytestring >=0.11.0.0,
                     http-types >=0.12,
                     wai-extra >=3.1,
                     wai >=3.2,
                     transformers >=0.5.0.0,
                     scotty >=0.12
  hs-source-dirs:     src
  ghc-options:        -Wall -O2

test-suite haskpy-test
  import:             common-options
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      MathSpec
                     , APISpec
  build-depends:      base >=4.17 && <4.20,
                     haskpy,
                     hspec >=2.10.0,
                     hspec-wai >=0.11.0,
                     hspec-wai-json >=0.10.0,
                     QuickCheck >=2.14,
                     aeson,
                     bytestring,
                     bytestring-conversion,
                     case-insensitive,
                     http-client,
                     http-types,
                     network-uri,
                     scotty,
                     string-conversions,
                     text,
                     transformers,
                     wai,
                     wai-extra
  hs-source-dirs:     test
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
